# rust_webserver

./: Cargo.toml
migrations/: 20241114151914_create_subscriptions_table.sql
scripts/: init_db.sh  init_db.sh.tmp
src/: lib.rs  main.rs  startup.rs  开发日记
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs
