[package]
name = "myweb"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "myweb"

[dependencies]
actix-web = "4.9.0"
tokio = {version = "1", features = ["macros", "rt-multi-thread"]}
serde = {version = "1", features = ["derive"]}
sqlx-cli = "0.6.0"

[dev-dependencies]
reqwest = "0.11.0"